gdb/regcache.c
@@ -1812,12 +1812,34 @@ public:
   {}
 };
 
+/* Return true if regcache::cooked_{read,write}_test should be skipped for
+   GDBARCH.  */
+
+static bool
+selftest_skiparch (struct gdbarch *gdbarch)
+{
+  const char *name = gdbarch_bfd_arch_info (gdbarch)->printable_name;
+
+  /* Avoid warning:
+       Running selftest regcache::cooked_{read,write}_test::m68hc11.
+       warning: No frame soft register found in the symbol table.
+       Stack backtrace will not work.
+     We could instead capture the output and then filter out the warning, but
+     that seems more trouble than it's worth.  */
+  return (strcmp (name, "m68hc11") == 0
+	  || strcmp (name, "m68hc12") == 0
+	  || strcmp (name, "m68hc12:HCS12") == 0);
+}
+
 /* Test regcache::cooked_read gets registers from raw registers and
    memory instead of target to_{fetch,store}_registers.  */
 
 static void
 cooked_read_test (struct gdbarch *gdbarch)
 {
+  if (selftest_skiparch (gdbarch))
+    return;
+
   scoped_mock_context<target_ops_no_register> mockctx (gdbarch);
 
   /* Test that read one raw register from regcache_no_target will go
@@ -1944,6 +1966,9 @@ cooked_read_test (struct gdbarch *gdbarch)
 static void
 cooked_write_test (struct gdbarch *gdbarch)
 {
+  if (selftest_skiparch (gdbarch))
+    return;
+
   /* Create a mock environment.  A process_stratum target pushed.  */
   scoped_mock_context<target_ops_no_register> ctx (gdbarch);
   readwrite_regcache readwrite (&ctx.mock_target, gdbarch);
